k8s/microservice-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-1
  namespace: microservices-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice-1
  template:
    metadata:
      labels:
        app: microservice-1
    spec:
      containers:
        - name: microservice-1
          image: microservice-1:0.0.1-SNAPSHOT  # Local image reference
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-1
  namespace: microservices-namespace
spec:
  type: ClusterIP
  selector:
    app: microservice-1
  ports:
    - protocol: TCP
      port: 8080
