k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: microservices-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-gateway.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-cloud-gateway
                port:
                  number: 80
